# rmd

./: .gitignore  Cargo.toml  README.md  build.rs
docs/birds/: README.md
docs/birds/raptors/: bald-eagle.md  great-horned-owl.md  red-tailed-hawk.md
docs/birds/songbirds/: american-robin.md  cardinal.md  house-finch.md
docs/birds/waterfowl/: canada-goose.md  mallard.md  mute-swan.md
src/: app.rs  file_tree.rs  main.rs  markdown.rs  ui.rs
